[MINOR] Uopdating to new SDK jar version and log DG11, DG12, DG13, DG14 results

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
     implementation("androidx.navigation:navigation-fragment-ktx:2.6.0")
     implementation("androidx.navigation:navigation-ui-ktx:2.6.0")
-    implementation files('/Users/mika/AndroidStudioProjects/CredenceID_ESample_Custom_ICAO_reading/app/libs/CredenceID-SDKJar-5.7.1-release.aar')
+    implementation files('/Users/mika/AndroidStudioProjects/capp_SampleEPassport_ICAO_PACE/app/libs/capp_CredenceSDKJar-5.9.2-RC1.aar')
     testImplementation("junit:junit:4.13.2")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
